# xiaohongshu

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.yaml  tags.yaml
src/xhs_digest/: __init__.py  api.py  cli.py  cluster.py  config.py  database.py  digest.py  logging.py  mailer.py  models.py  renderer.py  repository.py  scheduler.py  scoring.py  summarizer.py  trend_collection.py  trend_models.py  trend_service.py
src/xhs_digest/providers/: __init__.py  base.py  justone.py  trend_sources.py
src/xhs_digest/templates/: __init__.py  digest_email.html.j2
tests/: test_api.py  test_config.py  test_provider_mapping.py  test_renderer.py  test_scoring.py  test_trends.py
tests/fixtures/: justone_search.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  format.ts  sampleData.ts  styles.css  types.ts
web/src/components/: DetailPanel.tsx  FilterRail.tsx  GalaxyCanvas.tsx  TimelineBar.tsx
