[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xhs-trend-digest"
version = "0.1.0"
description = "Daily Xiaohongshu trend digest with tag filtering, third-party data providers, and email delivery."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "rich>=13.7.1",
  "sqlalchemy>=2.0.32",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-httpx>=0.30.0",
  "respx>=0.21.1"
]

[project.scripts]
daily-digest = "xhs_digest.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/xhs_digest"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
